--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
     "facility_path": "data/Facility2Constellation/",
-    "satellite_path": "data/Russia2Constellation/",
+    "satellite_path": "data/Russia2Constellation2/",
     "schedule_path": "data/schedule/",
     "satellites": [
         {
-            "name": "KinoSat",
+            "name_regex": "KinoSat_110[1-5]\\d{2}",
             "filling_speed": 4096,
             "freeing_speed": 1024,
             "space": 1048576
         },
         {
-            "name": "Zorkiy",
+            "name_regex": "KinoSat_11([1-2]\\d|0[6-9])\\d{2}",
             "filling_speed": 4096,
             "freeing_speed": 256,
             "space": 524288
