--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "facility_path": "data/Facility2Constellation/",
     "satellite_path": "data/Russia2Constellation2/",
-    "schedule_path": "data/schedule/",
+    "schedule_path": "schedule/",
     "satellites": [
         {
             "name": "Kinosputnik",
